--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <a href="index.html">Home
+    </a>
+    <a href="tutorial.html">Tutorial
+    </a>
+
     <!-- Add border to canvas -->
     <div style="margin-left:auto;margin-right:auto;width:800px;height:400px;">
         <canvas id="myCanvas" width="700" height="400" style="border: 1px solid black;">Your browser does not support canvas</canvas>
@@ -17,16 +22,13 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
-    
-    <script type="text/javascript" src="dist/bundle.js"></script>
+
+    <script type="text/javascript" src="GraphBattle/dist/bundle.js"></script>
     <script type="text/javascript">
         const canvas = document.getElementById("myCanvas");
         const status = document.getElementById("status");
         game = new Game(canvas, status);
         document.getElementById("functionInput").focus();
     </script>
-
-
 </body>
-
 </html>
